# C_Console_Chess

./: CMakeLists.txt  README.md  Sakk.cbp  Sakk.depend  Sakk.layout  a.txt  asd.txt  build.bat  build.sh  build_english.ps1  chess_build.c  dokumentacio.docx  en.txt  ideiglenesdokumentacio.txt  j.txt  jatek.txt  kerdesek.csv  konstansok.c  konstansok.h  konvertalasok.c  konvertalasok.h  lepes.c  lepes.h  lepes_ellenorzes_fuggvenyek.c  lepes_ellenorzes_fuggvenyek.h  main_new.c  matt.txt  metodusok.txt  mezo.h  most_sakk.c  oliver.c  programozoi_dokumentacio.docx  run_chess.ps1  sakk.c  sakk_masolat.txt  sanc.txt  specifikacio.docx  tempCodeRunnerFile.c  teszt.txt  ~$ecifikacio.docx  (+1 more)
A sakk egy fájlban/: lepes.h  mezo.h  sakk.c
A sakk külön komponensekre osztva + code blocks/: babu_lepesek.h  hasznalati_utmutato.c  jatszma.c  jatszma.h  jatszma_lepesek.h  kilepes.c  kilepes.h  konvertalasok.c  konvertalasok.h  lepes.h  lepes_ellenorzo.c  mentes_beolvas.c  mentes_beolvas.h  menu.c  mezo.h  sakk_ellenorzo.h
Doksik/: specifikacio.docx
Matt vizsgálata/: matt.txt
Sakk/: Sakk.depend  Sakk.layout  babu_lepesek.c  hasznalati utmutato.h  hibauzenet.c  hibauzenet.h  j.txt  jatszma_lepesek.c  lepes_ellenorzo.h  main.c  mentes_beolvas.c  mentes_beolvas.h  menu.h  sakk_ellenorzo.c
src/core/: board_setup.c  chess_constants.c  position_exchange.c
src/game/: game.c  game.c.new  game_moves.c  king_moves.c  pawn_promotion.c  piece_moves.c
src/include/: exit.h  (+15 more)
tests/: test_castling.txt  test_checkmate.txt  test_en_passant.txt  test_pawn_promotion.txt  test_piece_movements.txt
(+13 files in other folders)
